fix: text flickering

--- a/css/default.css
+++ b/css/default.css
@@ -80,7 +80,7 @@ body {
   font-family: "Consolas", "Monaco", "Bitstream Vera Sans Mono", "Courier New",
     "sans-serif";
   font-size: 30px; /* Larger font for readability */
-  height: 800px;
+  height: 1400px;
 }
 
 #code .string {
